Thu Feb 17 12:46:06 CET 2005 Daniel Veillard <veillard@redhat.com>

	* configure.in libgamin/gam_api.c libgamin/gam_data.c
	  libgamin/gam_protocol.h libgamin/gamin_sym.version
	  server/gam_debugging.[ch] server/Makefile.am: adding a
	  debugging infrastructure where some server internal events
	  can be reported to the client. This is only compiled if 
	  configured with --enable-debug-api, cleaned bup some configure.in
	  bugs
	* server/gam_dnotify.c: plugged DNotify in the debugging framework
	* python/gamin.c python/gamin.py: added python support for the
	  debugging framework
	* python/tests/Makefile.am python/tests/dnotify.py 
	  python/tests/dnotify2.py: started to add regression testing
	  for checking DNotify behaviour when debugging framework is activated.

Wed Feb 16 15:26:08 CET 2005 Daniel Veillard <veillard@redhat.com>

	* python/tests/level.py: reproduced the damn "Desktop doesn't refresh"
	  bug
	* server/gam_poll.c: fix fo the bug

Tue Feb 15 15:40:31 CET 2005 Daniel Veillard <veillard@redhat.com>

	* python/gamin.py: allow multiple monitoring of the same
	  file or dir in a given monitor
	* python/tests/Makefile.am python/tests/level.py
	  python/tests/multiple3.py: more tests

Tue Feb 15 12:57:05 CET 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_poll.c server/gam_subscription.[ch]: cleaning up
	  the server code, a number of bug fixes
	* python/tests/Makefile.am python/tests/*.py: adding a bunch of
	  new tests

Fri Feb 11 14:39:16 CET 2005 Daniel Veillard <veillard@redhat.com>

	* gamin.spec.in python/Makefile.am python/gamin.c python/gamin.py:
	  fixed #167064 renaming gaminmod to _gamin
	* python/tests/Makefile.am: make sure the PYTHONPATH includes
	  libgamin subdirs

Fri Feb 11 12:34:39 CET 2005 Daniel Veillard <veillard@redhat.com>

	* python/gamin.py: fixing a bug in the bindings
	* python/tests/Makefile.am python/tests/multiple.py: added a test
	  for multiple monitors watching the same resource.
