@@ -1,7 +1,7 @@
 #!/usr/bin/env python
 #
 # Checking DNotify registration/dregistration when monitoring a
-# directory as a file
+# directory as a directory
 #
 
 import gamin
@@ -14,7 +14,7 @@ ok = 1
 top = 0
 dbg = 0
 db_expect = [ 51, 52 ]
-expect = [gamin.GAMExists, gamin.GAMEndExist]
+expect = [gamin.GAMExists, gamin.GAMEndExist, gamin.GAMCreated]
 
 def debug(path, type, data):
     global dbg, db_expect, ok
@@ -43,19 +43,21 @@ os.mkdir ("temp_dir/a")
 
 mon = gamin.WatchMonitor()
 mon._debug_object("notify", debug, 0)
-mon.watch_file("temp_dir/a", callback, 0)
+mon.watch_directory("temp_dir/a", callback, 0)
+time.sleep(1)
+mon.handle_events()
+open("temp_dir/a/b", "w").close()
 time.sleep(1)
 mon.handle_events()
 mon.stop_watch("temp_dir/a")
 time.sleep(1)
-os.rmdir("temp_dir/a")
+shutil.rmtree ("temp_dir", True)
 time.sleep(1)
 mon.handle_events()
 mon.disconnect()
 del mon
-shutil.rmtree ("temp_dir", True)
 
-if top != 2:
+if top != 3:
     print "Error: monitor got %d events insteads of 2" % (top)
 elif dbg != 2 and gamin.has_debug_api == 1:
     print "Error: debug got %d events insteads of 2" % (dbg)
