@@ -1,9 +1,8 @@
 #!/usr/bin/env python
 #
 # Checking DNotify registration/dregistration when monitoring a
-# directory as a file
+# file as a directory
 #
-
 import gamin
 import time
 import os
@@ -14,13 +13,13 @@ ok = 1
 top = 0
 dbg = 0
 db_expect = [ 51, 52 ]
-expect = [gamin.GAMExists, gamin.GAMEndExist]
+expect = [gamin.GAMDeleted, gamin.GAMEndExist]
 
 def debug(path, type, data):
     global dbg, db_expect, ok
 
 #    print "Got debug %s, %s, %s" % (path, type, data)
-    if path[-10:] != "temp_dir/a":
+    if path[-8:] != "temp_dir":
         print "Error got debug path unexpected %s" % (path)
 	ok = 0
     if db_expect[dbg] != type:
@@ -36,19 +35,17 @@ def callback(path, event, which):
 	ok = 0
     top = top + 1
 
-
 shutil.rmtree ("temp_dir", True)
 os.mkdir ("temp_dir")
-os.mkdir ("temp_dir/a")
+open("temp_dir/a", "w").close()
 
 mon = gamin.WatchMonitor()
 mon._debug_object("notify", debug, 0)
-mon.watch_file("temp_dir/a", callback, 0)
+mon.watch_directory("temp_dir/a", callback, 0)
 time.sleep(1)
+mon.handle_one_event()
 mon.handle_events()
 mon.stop_watch("temp_dir/a")
-time.sleep(1)
-os.rmdir("temp_dir/a")
 time.sleep(1)
 mon.handle_events()
 mon.disconnect()
